mxslc/tests/data/error/global_2.mxsl
float foo()
{
    global float x;
    return x;
}

auto y = foo();
